# py-d2-manifest-bot

./: .gitignore  README.md  check_for_manifest.py  latest.json  pyproject.toml
.github/workflows/: check-for-new-manifest.yml  learn-github-actions.yml  skip-check-for-new-manifest.yml
