[tool.poetry]
authors = ["Tian-que <1605206150@qq.com>"]
description = ""
name = "py-d2-manifest-bot"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.22.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
